# ritual-agent-registry

./: .env.example  .gitignore  FINAL_SUMMARY.md  Makefile  README.md  WEB_README.md  pyproject.toml
agents/auditor/: SKILL.md
agents/notifier/: SKILL.md
agents/reputation-updater/: SKILL.md
cli/: __init__.py  __main__.py
cli/abi/: AgentRegistry.json
contracts/: .env.ritual  AgentRegistry.as  AgentRegistry.enum.as  AgentRegistry.full.as  AgentRegistry.sol  asconfig.json  assemblyscript.json  check_sources.js  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/.venv-hardhat/: pyvenv.cfg
contracts/scripts/: deploy.js  quickstart.py
contracts/typechain-types/: AgentRegistry.ts
contracts/typechain-types/factories/: AgentRegistry__factory.ts
examples/: README.md
examples/sample-agent/: Dockerfile  agent.py  docker-compose.yml  metadata.json
ritual_agent_registry/: __main__.py
ritual_agent_registry.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ritual_agent_registry/ritual_agent_registry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
scripts/: deploy.js  seed-agents.js
web/: .env.local.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
web/components/: AgentCard.tsx  CapabilityBadge.tsx  ReputationBar.tsx  WalletConnectButton.tsx  index.ts
web/lib/: config.ts  providers.tsx  ritual.ts  types.ts
web/pages/: _app.tsx  _document.tsx  index.tsx
web/pages/agent/: [address].tsx  new.tsx
web/styles/: globals.css
(+1 files in other folders)
